--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="hot-left" aria-hidden="true"></div>
       <div id="hot-right" aria-hidden="true"></div>
       <div class="wrap">
-        <div class="hint">Use ◄ ► keys or tap/drag to browse events</div>
+        <div class="hint">Move your mouse to the left or right edge to scroll • or use ◄ ►</div>
         <div id="carousel" class="carousel" aria-label="Race events"></div>
       </div>
     </section>
