--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Friday Night MTB Series</title>
+  <title>6 Pack Downhill</title>
   <meta name="description" content="Accountless schedule and photos for our Friday night MTB race series." />
   <link rel="preload" href="assets/css/styles.css" as="style">
   <link rel="stylesheet" href="assets/css/styles.css" />
@@ -27,11 +27,6 @@
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="wrap">
-      <small>© <span id="year"></span> Friday Night MTB • All times Eastern</small>
-    </div>
-  </footer>
 
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   <script defer src="assets/js/app.js"></script>
