Main Website Push

--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
   <title>6 Pack Downhill 2025</title>
   <meta name="description" content="Accountless schedule and photos for the 6 Pack Downhill 2025 Friday night MTB series." />
   <link rel="stylesheet" href="assets/css/styles.css?v=5" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="site-header">
     <div class="wrap">
-      <h1 class="brand">
-        <img src="assets/img/6pack-wordmark.svg" alt="6Pack" style="height:48px; vertical-align:middle;">
-      </h1>
-      <p class="tag">Dates • Times • Locations • Post‑race photos</p>
+      <h1 class="brand">6 Pack Downhill 2025 Schedule</h1>
     </div>
   </header>
 
